--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,48 +5,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="-126dp">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints">
+
             <ImageView
                 android:id="@+id/imageView16"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="324dp"
-                android:layout_marginLeft="324dp"
                 android:layout_marginTop="52dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:src="@drawable/icon_13"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView14" />
 
             <ImageView
                 android:id="@+id/imageView15"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="224dp"
-                android:layout_marginLeft="224dp"
                 android:layout_marginTop="52dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginRight="24dp"
                 android:src="@drawable/icon_35"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imageView16"
                 app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
             <ImageView
                 android:id="@+id/imageView14"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="324dp"
-                android:layout_marginLeft="324dp"
                 android:layout_marginTop="52dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:src="@drawable/icon_8"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView8"
                 tools:ignore="MissingConstraints" />
 
@@ -54,11 +58,11 @@
                 android:id="@+id/imageView13"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="224dp"
-                android:layout_marginLeft="224dp"
                 android:layout_marginTop="52dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginRight="28dp"
                 android:src="@drawable/icon_7"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imageView14"
                 app:layout_constraintTop_toBottomOf="@+id/imageView17"
                 tools:ignore="MissingConstraints" />
 
@@ -66,11 +70,11 @@
                 android:id="@+id/imageView11"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="120dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginLeft="32dp"
                 android:layout_marginTop="52dp"
                 android:src="@drawable/icon_12"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView10"
                 app:layout_constraintTop_toBottomOf="@+id/imageView12"
                 tools:ignore="MissingConstraints" />
 
@@ -78,11 +82,11 @@
                 android:id="@+id/imageView12"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="120dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginLeft="32dp"
                 android:layout_marginTop="52dp"
                 android:src="@drawable/icon_6"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView7"
                 app:layout_constraintTop_toBottomOf="@+id/imageView9"
                 tools:ignore="MissingConstraints" />
 
@@ -126,11 +130,11 @@
                 android:id="@+id/imageView8"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="324dp"
-                android:layout_marginLeft="324dp"
-                android:layout_marginTop="102dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:src="@drawable/icon_4"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
 
@@ -138,11 +142,11 @@
                 android:id="@+id/imageView9"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="120dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginLeft="32dp"
                 android:layout_marginTop="102dp"
                 android:src="@drawable/icon2"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView6"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
 
@@ -293,8 +297,8 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints"
-                android:background="#FFFFFF">
+                android:background="#FFFFFF"
+                tools:ignore="MissingConstraints">
 
             </FrameLayout>
 
@@ -351,13 +355,189 @@
                 android:id="@+id/imageView17"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginStart="224dp"
-                android:layout_marginLeft="224dp"
-                android:layout_marginTop="102dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginRight="28dp"
                 android:src="@drawable/icon_3"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imageView8"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                 tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="12dp"
+                android:gravity="center_horizontal"
+                android:text="Vé xem phim"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="98dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:text="Đặt vé Vietlott Mobilott"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:gravity="center_horizontal"
+                android:text="Nạp ĐT"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toStartOf="@+id/textView9"
+                app:layout_constraintTop_toBottomOf="@+id/imageView17" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="98dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:text="Chuyển tiền đến số TK"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+            <TextView
+                android:layout_width="98dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:text="Chuyển tiền đến số ĐT"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintStart_toEndOf="@+id/textView18"
+                app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="12dp"
+                android:gravity="center_horizontal"
+                android:text="Tiền điện"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintStart_toEndOf="@+id/textView10"
+                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:gravity="center_horizontal"
+                android:text="Tấm lòng nhân ái"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toStartOf="@+id/textView13"
+                app:layout_constraintTop_toBottomOf="@+id/imageView13" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:gravity="center_horizontal"
+                android:text="Thanh toán khoản vay"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:text="Vay tiền"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:text="Gửi tiết kiệm"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintStart_toEndOf="@+id/textView14"
+                app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                android:gravity="center_horizontal"
+                android:text="Xem thêm"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView16" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:gravity="center_horizontal"
+                android:text="Dịch vụ Viettel"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                app:layout_constraintEnd_toStartOf="@+id/textView17"
+                app:layout_constraintTop_toBottomOf="@+id/imageView15" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
